<resources>
    <string name="app_name">Quiz App</string>
    <string name="question1">1. Which European country lost around 30% of its population to famine in the early years of the 17th century?</string>
    <string name="answer11">Germany</string>
    <string name="answer12">Ukraine</string>
    <string name="answer13">Poland</string>
    <string name="answer14">Russia</string>

    <string name="question2">2. What wasnt invented by Blaise Pascal in the 17th century as a by-product of his attempts to produce a perpetual motion machine?</string>
    <string name="answer21">Barometer</string>
    <string name="answer22">Champagne</string>
    <string name="answer23">Roulette wheel</string>
    <string name="answer24">Pressure cooker</string>

    <string name="question3">3. Who in 1670 is credited with inventing champagne?</string>
    <string name="hintQ3">Enter answer</string>

    <string name="question4">4. What did Christian Huygens invent in the 17th century to revolutionise clock making?</string>
    <string name="answer41">Roulette Wheel</string>
    <string name="answer42">Barometer</string>
    <string name="answer43">Pendulum Clock</string>
    <string name="answer44">Pressure cooker</string>

    <string name="question5">5. Which musical instrument wasnt said to have been invented in Nuremburg in 1690?</string>
    <string name="answer51">Saxophone</string>
    <string name="answer52">Clarinet</string>
    <string name="answer53">Oboe</string>
    <string name="answer54">Chalumeau</string>

    <string name="question6">6. What did Englands puritan leaders ban in 1647?</string>
</resources>
